todo update for 04/12/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -21,13 +21,16 @@ Should still focus more so on the beta world, and trying out new things in gener
 * () r146 prototype: object3d-remove 
 
 ## Things I would like to get to at some point
-
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
 * () start an npm script replacement for the main gruntfile 
 <!-- videoground content -->
 * () videoground-beta-world - start an all new project that has to do with morph attributes
+<!-- videoground R8 -->
+* () videoground r8 - VIDEO.render method support
+* () videoground r8 - can return a promise in update methods
+* () videoground r8 - export to frames dialog
 
 
 <!-------- ----------
@@ -46,31 +49,28 @@ This week I would like to keep working on my new electionjs project at least a l
 * () start post #1036 on threejs-quaternion-
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
+<!-- videoground-beta-world -->
+* () videoground-beta-world - new 10 minute video using breathing basic
 
 ### () - THU 04/13/2023
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
 
 ### () - WED 04/12/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
+* (done) electionjs-examples: examples-mrsun - At least one revision
+<!-- videoground-beta-world -->
+* () videoground-beta-world - start new breathing-gridwrap project folder
+<!-- videoground-clients -->
+* () work on client project
 <!-- forpost/edit -->
 * () threejs-plane - update to r146 style
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
 
 ### () - TUE 04/11/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
 * (done) edit: threejs-examples-breath-module - proof read
 * (done) edit: threejs-texture-loader - update to r146 style
-<!-- videoground-beta-world -->
-* () videoground-beta-world - new 10 minute video using breathing basic
-* () videoground-beta-world - start new breathing-gridwrap project folder
-<!-- videoground-clients -->
-* () work on client project
-<!-- videoground R8 -->
-* () videoground r8 - VIDEO.render method support
-* () videoground r8 - can return a promise in update methods
-* () videoground r8 - export to frames dialog
-
 
 ### () - MON 04/10/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
@@ -102,7 +102,6 @@ This week I would like to keep working on my new electionjs project at least a l
 * (done) electionjs-examples: examples-mrsun - work more on blocks
 
 ### () - TUE 04/04/2023
-<!-- electionjs examples -->
 * (done) electionjs-examples: work on land state for mrsun prototype
 * (done) edit: threejs-shape - proof read opening and getting started
 * (done) forpost: threejs-shape - r146 style update
@@ -120,8 +119,6 @@ This week I would like to keep working on my new electionjs project at least a l
 ### () - SUN 04/02/2023
 * (done) threejs-quaternion-setfromunitvectors - start for post folder with at least 1 basic example
 * (done) forpost: threejs-quaternion-setfromunitvectors - start one animation loop example
-<!-- videoground-content -->
-
 
 <!-------- ----------
 -- WEEK 1
