--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -46,26 +46,26 @@ This week I would like to keep working on my new electionjs project at least a l
 
 ### () - FRI 04/14/2023
 <!-- forpost/new -->
-* () start post #1036 on threejs-quaternion-
+* () start post #1036 on threejs-quaternion-slerp
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
 <!-- videoground-beta-world -->
 * () videoground-beta-world - new 10 minute video using breathing basic
 
 ### () - THU 04/13/2023
+<!-- forpost/new -->
+* () forpost: start a for post folder for the slerp method of the quaternion class
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
-
-### () - WED 04/12/2023
-* (done) electionjs-examples: examples-mrsun - At least one revision
-<!-- videoground-beta-world -->
-* () videoground-beta-world - start new breathing-gridwrap project folder
-<!-- videoground-clients -->
-* () work on client project
 <!-- forpost/edit -->
 * () threejs-plane - update to r146 style
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
+
+### () - WED 04/12/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+* (done) videoground-beta-world - start new breathing-gridwrap project folder
+* (done) work on client project
 
 ### () - TUE 04/11/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
@@ -76,8 +76,6 @@ This week I would like to keep working on my new electionjs project at least a l
 * (done) electionjs-examples: examples-mrsun - At least one revision
 * (done) forpost: threejs-buffer-geometry-attributes-uv - update demos to r146 style
 * (done) edit: threejs-buffer-geometry-attributes-uv - new demos, proof read
-* () videogrond-beta-world: new 10min video using video4 from breathing-basic 
-* () videoground-clients: work on client project
 
 ### () - SUN 04/09/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
