post-check;id#: 473;v: 1.52;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -53,12 +53,16 @@ This week I would like to keep working on my new electionjs project at least a l
 * () videoground-beta-world - new 10 minute video using breathing basic
 
 ### () - THU 04/13/2023
-<!-- forpost/new -->
-* () forpost: start a for post folder for the slerp method of the quaternion class
+* (done) forpost: threejs-quaternion-slerp - start a for post folder for the slerp method of the quaternion class
+<!-- forpost/edit -->
+* () edit: threejs-plane - proof read opening
+* () edit: threejs-plane - update to r146 style
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
-<!-- forpost/edit -->
-* () threejs-plane - update to r146 style
+
+<!-- forpost/new -->
+* () forpost: forpost: threejs-quaternion-slerp - at least one more basic section example
+* () forpost: forpost: threejs-quaternion-slerp - have a loop section example
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
 
