post-check;id#: 473;v: 1.53;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -54,17 +54,16 @@ This week I would like to keep working on my new electionjs project at least a l
 
 ### () - THU 04/13/2023
 * (done) forpost: threejs-quaternion-slerp - start a for post folder for the slerp method of the quaternion class
-<!-- forpost/edit -->
-* () edit: threejs-plane - proof read opening
-* () edit: threejs-plane - update to r146 style
+* (done) edit: threejs-plane - proof read opening
+* (done) edit: threejs-plane - update basic section to r146 style
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
-
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
 <!-- forpost/new -->
 * () forpost: forpost: threejs-quaternion-slerp - at least one more basic section example
 * () forpost: forpost: threejs-quaternion-slerp - have a loop section example
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
+
 
 ### () - WED 04/12/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
