post-check;id#: 1036;v: 1.0;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -45,25 +45,21 @@ This week I would like to keep working on my new electionjs project at least a l
 * () electionjs-examples: examples-mrsun - At least one revision
 
 ### () - FRI 04/14/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+* (done) start post #1036 on threejs-quaternion-slerp
 <!-- forpost/new -->
-* () start post #1036 on threejs-quaternion-slerp
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
+* () forpost: forpost: threejs-quaternion-slerp - at least one more basic section example
+* () forpost: forpost: threejs-quaternion-slerp - have a loop section example
 <!-- videoground-beta-world -->
 * () videoground-beta-world - new 10 minute video using breathing basic
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
 
 ### () - THU 04/13/2023
 * (done) forpost: threejs-quaternion-slerp - start a for post folder for the slerp method of the quaternion class
 * (done) edit: threejs-plane - proof read opening
 * (done) edit: threejs-plane - update basic section to r146 style
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
-<!-- forpost/new -->
-* () forpost: forpost: threejs-quaternion-slerp - at least one more basic section example
-* () forpost: forpost: threejs-quaternion-slerp - have a loop section example
-
+* (done) electionjs-examples: examples-mrsun - At least one revision
 
 ### () - WED 04/12/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
