post-check;id#: 1036;v: 1.6;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -47,9 +47,9 @@ This week I would like to keep working on my new electionjs project at least a l
 ### () - FRI 04/14/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
 * (done) start post #1036 on threejs-quaternion-slerp
+* (done) forpost: forpost: threejs-quaternion-slerp - have a loop section example
 <!-- forpost/new -->
 * () forpost: forpost: threejs-quaternion-slerp - at least one more basic section example
-* () forpost: forpost: threejs-quaternion-slerp - have a loop section example
 <!-- videoground-beta-world -->
 * () videoground-beta-world - new 10 minute video using breathing basic
 <!-- videoground-blog-posts -->
