post-check;id#: 319;v: 1.31;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -34,6 +34,38 @@ Should still focus more so on the beta world, and trying out new things in gener
 
 
 <!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 04/16/2023 - SAT 04/22/2023
+
+Looks like this new electionjs game protoype is sucking up a whole lot of my time. Guess I should write a post about it then, and start a stand alone repo for the project this week.
+
+### () - SAT 04/15/2023
+* () electionjs-examples: examples-mrsun - just one revision
+* () start post #1037 on electionjs-example-game-mrsun
+* () start stand alone repo for mrsun-idle
+
+### () - FRI 04/15/2023
+* () electionjs-examples: examples-mrsun - just one revision
+
+### () - THU 04/15/2023
+* () electionjs-examples: examples-mrsun - just one revision
+
+### () - WED 04/15/2023
+* () electionjs-examples: examples-mrsun - just one revision
+
+### () - TUE 04/18/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
+
+### () - MON 04/17/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+
+### () - SUN 04/16/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+
+<!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 04/09/2023 - SAT 04/15/2023
@@ -41,19 +73,12 @@ Should still focus more so on the beta world, and trying out new things in gener
 This week I would like to keep working on my new electionjs project at least a little each day. As for continuing to say in my late with threejs I am thinking that I still have a lot more to write about with quaternion objects.
 
 ### () - SAT 04/15/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
+* (done) electionjs-examples: examples-mrsun - At least one revision
 
 ### () - FRI 04/14/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
 * (done) start post #1036 on threejs-quaternion-slerp
 * (done) forpost: forpost: threejs-quaternion-slerp - have a loop section example
-<!-- forpost/new -->
-* () forpost: forpost: threejs-quaternion-slerp - at least one more basic section example
-<!-- videoground-beta-world -->
-* () videoground-beta-world - new 10 minute video using breathing basic
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
 
 ### () - THU 04/13/2023
 * (done) forpost: threejs-quaternion-slerp - start a for post folder for the slerp method of the quaternion class
