--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -52,12 +52,13 @@ Looks like this new electionjs game protoype is sucking up a whole lot of my tim
 * () electionjs-examples: examples-mrsun - just one revision
 
 ### () - WED 04/15/2023
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
 * () electionjs-examples: examples-mrsun - just one revision
 
 ### () - TUE 04/18/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
+* (done) edit: threejs-ambientlight - proof read and expand a little
 
 ### () - MON 04/17/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
