--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -32,6 +32,36 @@ Should still focus more so on the beta world, and trying out new things in gener
 * () videoground r8 - can return a promise in update methods
 * () videoground r8 - export to frames dialog
 
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 04/23/2023 - SAT 04/29/2023
+
+### () - SAT 04/29/2023
+* () mrsun-idle: work on project
+
+### () - FRI 04/28/2023
+* () start post #1037 on electionjs-example-game-mrsun
+* () start stand alone repo for mrsun-idle
+* () build and publish
+* () electionjs-examples: examples-mrsun - just one revision
+
+### () - THU 04/27/2023
+* () electionjs-examples: examples-mrsun - just one revision
+
+### () - WED 04/26/2023
+* () electionjs-examples: examples-mrsun - just one revision
+
+### () - TUE 04/25/2023
+* (done) electionjs-examples: examples-mrsun - just one revision
+* () edit : threejs-export-webm-whammy - just a quick proof read
+* () edit : threejs-webgl - proof read, update for post folder
+
+### () - MON 04/24/2023
+* (done) electionjs-examples: examples-mrsun - just one revision
+
+### () - SUN 04/23/2023
+* (done) electionjs-examples: examples-mrsun - just one revision
 
 <!-------- ----------
 -- WEEK 4
@@ -40,21 +70,17 @@ Should still focus more so on the beta world, and trying out new things in gener
 
 Looks like this new electionjs game protoype is sucking up a whole lot of my time. Guess I should write a post about it then, and start a stand alone repo for the project this week.
 
-### () - SAT 04/15/2023
-* () electionjs-examples: examples-mrsun - just one revision
-* () start post #1037 on electionjs-example-game-mrsun
-* () start stand alone repo for mrsun-idle
+### () - SAT 04/22/2023
+* (done) electionjs-examples: examples-mrsun - just one revision
 
-### () - FRI 04/15/2023
+### () - FRI 04/21/2023
 * () electionjs-examples: examples-mrsun - just one revision
 
-### () - THU 04/15/2023
-* () electionjs-examples: examples-mrsun - just one revision
+### () - THU 04/20/2023
+* (done) electionjs-examples: examples-mrsun - just one revision
 
-### () - WED 04/15/2023
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video1 for threejs-quaternion-setfromunitvectors
-* () electionjs-examples: examples-mrsun - just one revision
+### () - WED 04/19/2023
+* (done) electionjs-examples: examples-mrsun - just one revision
 
 ### () - TUE 04/18/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
