post-check;id#: 476;v: 1.28;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -54,8 +54,10 @@ Should still focus more so on the beta world, and trying out new things in gener
 
 ### () - TUE 04/25/2023
 * (done) electionjs-examples: examples-mrsun - just one revision
-* () edit : threejs-export-webm-whammy - just a quick proof read
-* () edit : threejs-webgl - proof read, update for post folder
+* (done) edit : threejs-export-webm-whammy - just a quick proof read
+* (done) edit : threejs-webgl - proof read of opening
+* () edit : threejs-webgl - update for post folder
+* () videoground-blog-posts - 
 
 ### () - MON 04/24/2023
 * (done) electionjs-examples: examples-mrsun - just one revision
