--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -56,7 +56,7 @@ Should still focus more so on the beta world, and trying out new things in gener
 * (done) electionjs-examples: examples-mrsun - just one revision
 * (done) edit : threejs-export-webm-whammy - just a quick proof read
 * (done) edit : threejs-webgl - proof read of opening
-* () edit : threejs-webgl - update for post folder
+* (done) edit : threejs-webgl - update for post folder
 * () videoground-blog-posts - 
 
 ### () - MON 04/24/2023
