--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -42,22 +42,21 @@ Should still focus more so on the beta world, and trying out new things in gener
 
 ### () - FRI 04/28/2023
 * () start post #1037 on electionjs-example-game-mrsun
-* () start stand alone repo for mrsun-idle
 * () build and publish
+* () start stand alone repo for mrsun-idle
 * () electionjs-examples: examples-mrsun - just one revision
 
 ### () - THU 04/27/2023
-* () electionjs-examples: examples-mrsun - just one revision
+* (done) electionjs-examples: examples-mrsun - just one revision
 
 ### () - WED 04/26/2023
-* () electionjs-examples: examples-mrsun - just one revision
+* (done) electionjs-examples: examples-mrsun - just one revision
 
 ### () - TUE 04/25/2023
 * (done) electionjs-examples: examples-mrsun - just one revision
 * (done) edit : threejs-export-webm-whammy - just a quick proof read
 * (done) edit : threejs-webgl - proof read of opening
 * (done) edit : threejs-webgl - update for post folder
-* () videoground-blog-posts - 
 
 ### () - MON 04/24/2023
 * (done) electionjs-examples: examples-mrsun - just one revision
