post-check;id#: 1037;v: 1.2;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -38,13 +38,10 @@ Should still focus more so on the beta world, and trying out new things in gener
 ## () - WEEK 5 - SUN 04/23/2023 - SAT 04/29/2023
 
 ### () - SAT 04/29/2023
-* () mrsun-idle: work on project
+* (done) mrsun-idle: work on project
 
 ### () - FRI 04/28/2023
-* () start post #1037 on electronjs-example-game-mrsun
-* () build and publish
-* () start stand alone repo for mrsun-idle
-* () electionjs-examples: examples-mrsun - just one revision
+* (done) start post #1037 on electronjs-example-game-mrsun
 
 ### () - THU 04/27/2023
 * (done) electionjs-examples: examples-mrsun - just one revision
