post-check;id#: 1038;v: 1.0;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -11,6 +11,7 @@ examples-electronjs, mrsun-idle, THREEJS
 ### () - SAT 05/06/2023
 
 ### () - FRI 05/05/2023
+* () start post #1038 on threejs-examples-timeline
 
 ### () - THU 05/04/2023
 
