--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -4,24 +4,35 @@ examples-electronjs, mrsun-idle, THREEJS
 
 
 <!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - MON 05/07/2023 - SAT 05/13/2023
+
+
+### () - SUN 05/07/2023
+* () edit: threejs-examples-timeline
+* () built and publish
+
+<!-------- ----------
 -- WEEK 1
 ---------- --------->
 ## () - WEEK 1 - MON 05/01/2023 - SAT 05/06/2023
 
 ### () - SAT 05/06/2023
+* () edit: threejs-examples-timeline
 
 ### () - FRI 05/05/2023
-* () start post #1038 on threejs-examples-timeline
+* (done) start post #1038 on threejs-examples-timeline
 
 ### () - THU 05/04/2023
+* (done) electronjs-examples - electionjs-example-mrsun - r75
 
 ### () - WED 05/03/2023
+* (done) electronjs-examples - electionjs-example-mrsun - r75
 
 ### () - TUE 05/02/2023
-* () electronjs-examples - electionjs-example-mrsun - r75
-* () edit: electronjs-example-game-mrsun - expand to at least 1000 words
+* (done) electronjs-examples - electionjs-example-mrsun - r75
 
 ### () - MON 05/01/2023
 * (done) electronjs-examples - electionjs-example-mrsun - r73
 * (done) electronjs-examples - electionjs-example-mrsun - r74
-* () edit: electronjs-example-game-mrsun - expand to at least 1000 words
