--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -19,19 +19,21 @@ examples-electronjs, mrsun-idle, THREEJS
 ## () - WEEK 1 - MON 05/01/2023 - SAT 05/06/2023
 
 ### () - SAT 05/06/2023
-* () edit: threejs-examples-timeline
+* (done) electronjs-examples - electionjs-example-mrsun - r87
+* (done) edit: threejs-examples-timeline
+* () start new repo for final idle-mrsun
 
 ### () - FRI 05/05/2023
 * (done) start post #1038 on threejs-examples-timeline
 
 ### () - THU 05/04/2023
-* (done) electronjs-examples - electionjs-example-mrsun - r75
+* (done) electronjs-examples - electionjs-example-mrsun - r78
 
 ### () - WED 05/03/2023
-* (done) electronjs-examples - electionjs-example-mrsun - r75
+* (done) electronjs-examples - electionjs-example-mrsun - r77
 
 ### () - TUE 05/02/2023
-* (done) electronjs-examples - electionjs-example-mrsun - r75
+* (done) electronjs-examples - electionjs-example-mrsun - r76
 
 ### () - MON 05/01/2023
 * (done) electronjs-examples - electionjs-example-mrsun - r73
