--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -10,8 +10,11 @@ examples-electronjs, mrsun-idle, THREEJS
 
 
 ### () - SUN 05/07/2023
-* () edit: threejs-examples-timeline
+* () edit: threejs-object3d-get-by-name - proof read intro
+* () videoground-blog-posts : threejs-object3d-get-by-name - make video1 based on that cool demo
+* () edit: threejs-object3d-get-by-name - embed video1
 * () built and publish
+* () start new repo for final idle-mrsun
 
 <!-------- ----------
 -- WEEK 1
@@ -21,7 +24,7 @@ examples-electronjs, mrsun-idle, THREEJS
 ### () - SAT 05/06/2023
 * (done) electronjs-examples - electionjs-example-mrsun - r87
 * (done) edit: threejs-examples-timeline
-* () start new repo for final idle-mrsun
+* (done) edit: threejs-object3d-get-by-name - proof read opening
 
 ### () - FRI 05/05/2023
 * (done) start post #1038 on threejs-examples-timeline
