--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -10,6 +10,7 @@ examples-electronjs, mrsun-idle, THREEJS
 
 
 ### () - SUN 05/07/2023
+* (done) edit: threejs-fog - new basic demo
 * () edit: threejs-object3d-get-by-name - proof read intro
 * () videoground-blog-posts : threejs-object3d-get-by-name - make video1 based on that cool demo
 * () edit: threejs-object3d-get-by-name - embed video1
