post-check;id#: 891;v: 1.31;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -8,14 +8,18 @@ examples-electronjs, mrsun-idle, THREEJS
 ---------- --------->
 ## () - WEEK 2 - MON 05/07/2023 - SAT 05/13/2023
 
+### () - TUE 05/08/2023
+* () idle-mrsun : work on r90
+
+### () - MON 05/08/2023
+* (done) start new repo for idle-mrsun based on prototype
+* () edit: threejs-vector3-apply-axis-angle - proof read, check for post folder
+* () build and publish
 
 ### () - SUN 05/07/2023
 * (done) edit: threejs-fog - new basic demo
-* () edit: threejs-object3d-get-by-name - proof read intro
 * (done) videoground-blog-posts : threejs-object3d-get-by-name - make video1 based on that cool demo
 * (done) edit: threejs-object3d-get-by-name - embed video1
-* () built and publish
-* () start new repo for final idle-mrsun
 
 <!-------- ----------
 -- WEEK 1
