post-check;id#: 891;v: 1.33;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -13,7 +13,7 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - MON 05/08/2023
 * (done) start new repo for idle-mrsun based on prototype
-* () edit: threejs-vector3-apply-axis-angle - proof read, check for post folder
+* (done) edit: threejs-vector3-apply-axis-angle - proof read, check for post folder
 * () build and publish
 
 ### () - SUN 05/07/2023
