post-check;id#: 883;v: 1.59;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -9,12 +9,18 @@ examples-electronjs, mrsun-idle, THREEJS
 ## () - WEEK 2 - MON 05/07/2023 - SAT 05/13/2023
 
 ### () - TUE 05/08/2023
+* () edit: threejs-buffer-geometry-attributes-position - 
+* () build and publish
+* () idle-mrsun : start a dev branch and have a 0.89.0 tag using git merge
+```
+    https://stackoverflow.com/questions/3697178/merge-with-squash-all-changes-from-another-branch-as-a-single-commit
+```
 * () idle-mrsun : work on r90
 
 ### () - MON 05/08/2023
 * (done) start new repo for idle-mrsun based on prototype
 * (done) edit: threejs-vector3-apply-axis-angle - proof read, check for post folder
-* () build and publish
+
 
 ### () - SUN 05/07/2023
 * (done) edit: threejs-fog - new basic demo
