--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -8,14 +8,23 @@ examples-electronjs, mrsun-idle, THREEJS
 ---------- --------->
 ## () - WEEK 2 - MON 05/07/2023 - SAT 05/13/2023
 
-### () - TUE 05/08/2023
-* () edit: threejs-buffer-geometry-attributes-position - 
-* () build and publish
-* () idle-mrsun : start a dev branch and have a 0.89.0 tag using git merge
-```
-    https://stackoverflow.com/questions/3697178/merge-with-squash-all-changes-from-another-branch-as-a-single-commit
-```
-* () idle-mrsun : work on r90
+
+### () - SAT 05/13/2023
+
+### () - FRI 05/12/2023
+* () start post #1039 on threejs-
+
+### () - THU 05/11/2023
+
+### () - WED 05/10/2023
+* (done) idle-mrsun : work on r91
+* (done) edit: threejs-face3-color - proof read
+* () work on threejs r146 prototypes
+
+### () - TUE 05/09/2023
+* (done) edit: threejs-buffer-geometry-attributes-position - 
+* (done) build and publish
+* (done) idle-mrsun : work on r90
 
 ### () - MON 05/08/2023
 * (done) start new repo for idle-mrsun based on prototype
