--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -15,10 +15,13 @@ examples-electronjs, mrsun-idle, THREEJS
 * () start post #1039 on threejs-
 
 ### () - THU 05/11/2023
+* () edit : threejs-object3d-visible
+* () edit : threejs-clock
 
 ### () - WED 05/10/2023
 * (done) idle-mrsun : work on r91
 * (done) edit: threejs-face3-color - proof read
+* (done) edit: threejs-face3 - updated basic example
 * () work on threejs r146 prototypes
 
 ### () - TUE 05/09/2023
