--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -10,13 +10,17 @@ examples-electronjs, mrsun-idle, THREEJS
 
 
 ### () - SAT 05/13/2023
+* () idle-mrsun : work on r94
 
 ### () - FRI 05/12/2023
-* () start post #1039 on threejs-
+* () idle-mrsun : work on r93
+* () start post #1040 on threejs-
+* () edit : threejs-clock
 
 ### () - THU 05/11/2023
+* () idle-mrsun : work on r92
+* () start post #1039 on git-clone
 * () edit : threejs-object3d-visible
-* () edit : threejs-clock
 
 ### () - WED 05/10/2023
 * (done) idle-mrsun : work on r91
