--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -14,11 +14,12 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - FRI 05/12/2023
 * () idle-mrsun : work on r93
-* () start post #1040 on threejs-
+* () start post #1040 on threejs-buffer-geometry-set-draw-range
 * () edit : threejs-clock
 
 ### () - THU 05/11/2023
 * () idle-mrsun : work on r92
+* () forpost: start a threejs-buffer-geometry-set-draw-range
 * () start post #1039 on git-clone
 * () edit : threejs-object3d-visible
 
@@ -26,7 +27,7 @@ examples-electronjs, mrsun-idle, THREEJS
 * (done) idle-mrsun : work on r91
 * (done) edit: threejs-face3-color - proof read
 * (done) edit: threejs-face3 - updated basic example
-* () work on threejs r146 prototypes
+* (done) work on threejs r146 prototypes
 
 ### () - TUE 05/09/2023
 * (done) edit: threejs-buffer-geometry-attributes-position - 
