post-check;id#: 1039;v: 1.0;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -18,9 +18,9 @@ examples-electronjs, mrsun-idle, THREEJS
 * () edit : threejs-clock
 
 ### () - THU 05/11/2023
-* () idle-mrsun : work on r92
-* () forpost: start a threejs-buffer-geometry-set-draw-range
+* (done) idle-mrsun : work on r92
 * () start post #1039 on git-clone
+* () forpost: start a threejs-buffer-geometry-set-draw-range
 * () edit : threejs-object3d-visible
 
 ### () - WED 05/10/2023
