post-check;id#: 873;v: 1.38;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -16,10 +16,11 @@ examples-electronjs, mrsun-idle, THREEJS
 * () idle-mrsun : work on r93
 * () start post #1040 on threejs-buffer-geometry-set-draw-range
 * () edit : threejs-clock
+* () edit: git-clone
 
 ### () - THU 05/11/2023
 * (done) idle-mrsun : work on r92
-* () start post #1039 on git-clone
+* (done) start post #1039 on git-clone
 * () forpost: start a threejs-buffer-geometry-set-draw-range
 * () edit : threejs-object3d-visible
 
