--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -13,16 +13,16 @@ examples-electronjs, mrsun-idle, THREEJS
 * () idle-mrsun : work on r94
 
 ### () - FRI 05/12/2023
-* () idle-mrsun : work on r93
-* () start post #1040 on threejs-buffer-geometry-set-draw-range
+* (done) idle-mrsun : work on r93
+* (done) forpost: start a threejs-buffer-geometry-set-draw-range
+* (done) start post #1040 on threejs-buffer-geometry-set-draw-range
 * () edit : threejs-clock
 * () edit: git-clone
 
 ### () - THU 05/11/2023
 * (done) idle-mrsun : work on r92
 * (done) start post #1039 on git-clone
-* () forpost: start a threejs-buffer-geometry-set-draw-range
-* () edit : threejs-object3d-visible
+* (done) edit : threejs-object3d-visible
 
 ### () - WED 05/10/2023
 * (done) idle-mrsun : work on r91
