post-check;id#: 1039;v: 1.1;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -16,8 +16,8 @@ examples-electronjs, mrsun-idle, THREEJS
 * (done) idle-mrsun : work on r93
 * (done) forpost: start a threejs-buffer-geometry-set-draw-range
 * (done) start post #1040 on threejs-buffer-geometry-set-draw-range
+* (done) edit: git-clone
 * () edit : threejs-clock
-* () edit: git-clone
 
 ### () - THU 05/11/2023
 * (done) idle-mrsun : work on r92
