--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -17,7 +17,7 @@ examples-electronjs, mrsun-idle, THREEJS
 * (done) forpost: start a threejs-buffer-geometry-set-draw-range
 * (done) start post #1040 on threejs-buffer-geometry-set-draw-range
 * (done) edit: git-clone
-* () edit : threejs-clock
+* (done) edit : threejs-clock
 
 ### () - THU 05/11/2023
 * (done) idle-mrsun : work on r92
