post-check;id#: 335;v: 1.39;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -4,13 +4,46 @@ examples-electronjs, mrsun-idle, THREEJS
 
 
 <!-------- ----------
--- WEEK 2
+-- WEEK 3
 ---------- --------->
-## () - WEEK 2 - MON 05/07/2023 - SAT 05/13/2023
+## () - WEEK 3 - SUN 05/07/2023 - SAT 05/13/2023
 
 
 ### () - SAT 05/13/2023
-* () idle-mrsun : work on r94
+* () idle-mrsun : work on r101
+
+### () - FRI 05/12/2023
+* () idle-mrsun : work on r100
+
+### () - THU 05/11/2023
+* () idle-mrsun : work on r99
+
+### () - WED 05/10/2023
+* () idle-mrsun : work on r98
+
+### () - TUE 05/09/2023
+* () idle-mrsun : work on r97
+* () edit: threejs-cone
+* () edit: threejs-cylinder-geometry
+* () edit: threejs-tetrahedron
+
+### () - MON 05/08/2023
+* (done) idle-mrsun : work on r96
+* (done) edit: threejs-buffer-geometry-set-draw-range - expand sections a little
+* () edit: threejs-webglrenderer
+* () videoground-blog-posts: video1 for threejs-buffer-geometry-set-draw-range
+
+### () - SUN 05/07/2023
+* (done) idle-mrsun : work on r95
+
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 05/14/2023 - SAT 05/20/2023
+
+
+### () - SAT 05/13/2023
+* (done) idle-mrsun : work on r94
 
 ### () - FRI 05/12/2023
 * (done) idle-mrsun : work on r93
