post-check;id#: 335;v: 1.40;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -30,7 +30,7 @@ examples-electronjs, mrsun-idle, THREEJS
 ### () - MON 05/08/2023
 * (done) idle-mrsun : work on r96
 * (done) edit: threejs-buffer-geometry-set-draw-range - expand sections a little
-* () edit: threejs-webglrenderer
+* (done) edit: threejs-webglrenderer
 * () videoground-blog-posts: video1 for threejs-buffer-geometry-set-draw-range
 
 ### () - SUN 05/07/2023
