post-check;id#: 1040;v: 1.4;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -31,7 +31,7 @@ examples-electronjs, mrsun-idle, THREEJS
 * (done) idle-mrsun : work on r96
 * (done) edit: threejs-buffer-geometry-set-draw-range - expand sections a little
 * (done) edit: threejs-webglrenderer
-* () videoground-blog-posts: video1 for threejs-buffer-geometry-set-draw-range
+* (done) videoground-blog-posts: video1 for threejs-buffer-geometry-set-draw-range
 
 ### () - SUN 05/07/2023
 * (done) idle-mrsun : work on r95
