post-check;id#: 512;v: 1.31;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -21,11 +21,13 @@ examples-electronjs, mrsun-idle, THREEJS
 ### () - WED 05/10/2023
 * () idle-mrsun : work on r98
 
+* () edit: threejs-tetrahedron
+
 ### () - TUE 05/09/2023
-* () idle-mrsun : work on r97
+* (done) idle-mrsun : work on r97
 * () edit: threejs-cone
 * () edit: threejs-cylinder-geometry
-* () edit: threejs-tetrahedron
+* () work on r146 prototypes
 
 ### () - MON 05/08/2023
 * (done) idle-mrsun : work on r96
