post-check;id#: 512;v: 1.32;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -25,8 +25,8 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - TUE 05/09/2023
 * (done) idle-mrsun : work on r97
-* () edit: threejs-cone
-* () edit: threejs-cylinder-geometry
+* (done) edit: threejs-cone
+* (done) edit: threejs-cylinder-geometry
 * () work on r146 prototypes
 
 ### () - MON 05/08/2023
