--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -19,15 +19,16 @@ examples-electronjs, mrsun-idle, THREEJS
 * () idle-mrsun : work on r99
 
 ### () - WED 05/10/2023
-* () idle-mrsun : work on r98
-
+* (done) edit: threejs-cylinder-geometry
 * () edit: threejs-tetrahedron
+* () idle-mrsun : work on r98
+* () work on r146 prototypes
 
 ### () - TUE 05/09/2023
 * (done) idle-mrsun : work on r97
 * (done) edit: threejs-cone
 * (done) edit: threejs-cylinder-geometry
-* () work on r146 prototypes
+
 
 ### () - MON 05/08/2023
 * (done) idle-mrsun : work on r96
