post-check;id#: 1016;v: 1.11;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -20,7 +20,7 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - WED 05/10/2023
 * (done) edit: threejs-cylinder-geometry
-* () edit: threejs-tetrahedron
+* (done) edit: threejs-tetrahedron
 * () idle-mrsun : work on r98
 * () work on r146 prototypes
 
