post-check;id#: 882;v: 1.24;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -14,14 +14,19 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - FRI 05/12/2023
 * () idle-mrsun : work on r100
+* () start post #1042 on threejs-
 
 ### () - THU 05/11/2023
 * () idle-mrsun : work on r99
+* () start post #1041 on git-
+* () edit: threejs-fly-controls
+* () edit: threejs-orbit-controls
 
 ### () - WED 05/10/2023
 * (done) edit: threejs-cylinder-geometry
 * (done) edit: threejs-tetrahedron
-* () idle-mrsun : work on r98
+* (done) idle-mrsun : work on r98
+* (done) edit: threejs-object3d-layers
 * () work on r146 prototypes
 
 ### () - TUE 05/09/2023
