--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -14,11 +14,11 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - FRI 05/12/2023
 * () idle-mrsun : work on r100
-* () start post #1042 on threejs-
+* () start post #1042 on threejs-lod
 
 ### () - THU 05/11/2023
 * () idle-mrsun : work on r99
-* () start post #1041 on git-
+* () start post #1041 on git-pull
 * () edit: threejs-fly-controls
 * () edit: threejs-orbit-controls
 
@@ -27,7 +27,7 @@ examples-electronjs, mrsun-idle, THREEJS
 * (done) edit: threejs-tetrahedron
 * (done) idle-mrsun : work on r98
 * (done) edit: threejs-object3d-layers
-* () work on r146 prototypes
+* (done) work on r152 prototypes
 
 ### () - TUE 05/09/2023
 * (done) idle-mrsun : work on r97
