post-check;id#: 1041;v: 1.0;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -18,7 +18,7 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - THU 05/11/2023
 * () idle-mrsun : work on r99
-* () start post #1041 on git-pull
+* (done) start post #1041 on git-pull
 * () edit: threejs-fly-controls
 * () edit: threejs-orbit-controls
 
