--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -17,10 +17,10 @@ examples-electronjs, mrsun-idle, THREEJS
 * () start post #1042 on threejs-lod
 
 ### () - THU 05/11/2023
-* () idle-mrsun : work on r99
+* (done) idle-mrsun : work on r99
 * (done) start post #1041 on git-pull
-* () edit: threejs-fly-controls
-* () edit: threejs-orbit-controls
+* (done) edit: threejs-fly-controls
+* (done) edit: threejs-orbit-controls
 
 ### () - WED 05/10/2023
 * (done) edit: threejs-cylinder-geometry
