--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -13,8 +13,11 @@ examples-electronjs, mrsun-idle, THREEJS
 * () idle-mrsun : work on r101
 
 ### () - FRI 05/12/2023
+* (done) edit: git-checkout
+* (done) start for post folder for threejs-lod
+* (done) start post #1042 on threejs-lod
 * () idle-mrsun : work on r100
-* () start post #1042 on threejs-lod
+
 
 ### () - THU 05/11/2023
 * (done) idle-mrsun : work on r99
