post-check;id#: 1042;v: 1.1;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -11,13 +11,17 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - SAT 05/13/2023
 * () idle-mrsun : work on r101
+* () edit git-pull
+* () edit threejs-lod
+* () build and publish
 
 ### () - FRI 05/12/2023
 * (done) edit: git-checkout
 * (done) start for post folder for threejs-lod
 * (done) start post #1042 on threejs-lod
-* () idle-mrsun : work on r100
 
+* () idle-mrsun : work on r100
+* () videoground-blog-posts : video1 for threejs-lod
 
 ### () - THU 05/11/2023
 * (done) idle-mrsun : work on r99
