post-check;id#: 1041;v: 1.4;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -11,8 +11,8 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - SAT 05/13/2023
 * (done) edit threejs-lod
+* (done) edit git-pull
 * () idle-mrsun : work on r101
-* () edit git-pull
 * () build and publish
 * () videoground-blog-posts : video1 for threejs-lod
 
