--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -4,17 +4,48 @@ examples-electronjs, mrsun-idle, THREEJS
 
 
 <!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 05/21/2023 - SAT 05/27/2023
+
+### () - SAT 05/27/2023
+
+### () - FRI 05/26/2023
+* () build and publish
+
+### () - THU 05/25/2023
+* () start post #1044 on threejs-
+
+### () - WED 05/24/2023
+* () start post #1043 on git-
+
+### () - TUE 05/23/2023
+
+
+### () - MON 05/22/2023
+* (done) threejs-materials-transparent
+* (done) threejs-light-probe
+
+* () videoground-blog-posts : video1 for threejs-lod
+* () edit: threejs-light-probe
+
+* () idle-mrsun : work on r101
+
+### () - SUN 05/21/2023
+
+
+
+
+### () - SAT 05/13/2023
+
+<!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 05/07/2023 - SAT 05/13/2023
 
-
 ### () - SAT 05/13/2023
 * (done) edit threejs-lod
 * (done) edit git-pull
-* () idle-mrsun : work on r101
-* () build and publish
-* () videoground-blog-posts : video1 for threejs-lod
 
 ### () - FRI 05/12/2023
 * (done) edit: git-checkout
