post-check;id#: 1042;v: 1.8;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -25,10 +25,8 @@ examples-electronjs, mrsun-idle, THREEJS
 ### () - MON 05/22/2023
 * (done) threejs-materials-transparent
 * (done) threejs-light-probe
-
-* () videoground-blog-posts : video1 for threejs-lod
-* () edit: threejs-light-probe
-
+* (done) videoground-blog-posts : video1 for threejs-lod
+* (done) edit: threejs-lod
 * () idle-mrsun : work on r101
 
 ### () - SUN 05/21/2023
