post-check;id#: 985;v: 1.26;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -1,7 +1,13 @@
 # todo list for MAY 2023
 
-examples-electronjs, mrsun-idle, THREEJS
+THREEJS, git
 
+I have stayed in my lane with threejs for over a year, but I think now I should expand and edit my content on git at least a little this month as well.
+
+
+* () edit: threejs-line-fat-width
+* () edit: threejs-standard-material
+* () edit: threejs-basic-material
 
 <!-------- ----------
 -- WEEK 4
@@ -10,16 +16,26 @@ examples-electronjs, mrsun-idle, THREEJS
 
 ### () - SAT 05/27/2023
 
+
 ### () - FRI 05/26/2023
+* () edit: threejs-normal-map
+* () edit: threejs-geometry
 * () build and publish
 
 ### () - THU 05/25/2023
-* () start post #1044 on threejs-
+* () start post #1044 on threejs-curve-quadratic-bezier-curve2
+* () edit: threejs-curve-geometry-from
+* () edit: threejs-mesh
 
 ### () - WED 05/24/2023
 * () start post #1043 on git-
+* () edit: threejs-curve
+* () edit: threejs-curve-quadratic-bezier-curve3
 
 ### () - TUE 05/23/2023
+* () idle-mrsun : work on r101
+* () edit: threejs-box3
+* () edit: threejs-buffer-geometry-index
 
 
 ### () - MON 05/22/2023
@@ -27,12 +43,8 @@ examples-electronjs, mrsun-idle, THREEJS
 * (done) threejs-light-probe
 * (done) videoground-blog-posts : video1 for threejs-lod
 * (done) edit: threejs-lod
-* () idle-mrsun : work on r101
 
 ### () - SUN 05/21/2023
-
-
-
 
 ### () - SAT 05/13/2023
 
