post-check;id#: 1017;v: 1.12;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -34,9 +34,9 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 
 ### () - TUE 05/23/2023
 * () idle-mrsun : work on r101
-* () edit: threejs-box3
-* () edit: threejs-buffer-geometry-index
-
+* (done) edit: threejs-box3
+* (done) edit: threejs-buffer-geometry-index
+* () start an r152 demo for quadratic-bezier-curve2
 
 ### () - MON 05/22/2023
 * (done) threejs-materials-transparent
