--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -23,20 +23,23 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * () build and publish
 
 ### () - THU 05/25/2023
-* () start post #1044 on threejs-curve-quadratic-bezier-curve2
+* () start post #1044 on threejs-curve-quadratic-bezier-curve
+* () edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
 * () edit: threejs-curve-geometry-from
 * () edit: threejs-mesh
 
 ### () - WED 05/24/2023
-* () start post #1043 on git-
+* () start post #1043 on git-push
 * () edit: threejs-curve
 * () edit: threejs-curve-quadratic-bezier-curve3
+* () forpost: start threejs-curve-quadratic-bezier-curve for post folder with r152 demos
+* () forpost: threejs-curve-quadratic-bezier-curve
 
 ### () - TUE 05/23/2023
 * () idle-mrsun : work on r101
 * (done) edit: threejs-box3
 * (done) edit: threejs-buffer-geometry-index
-* () start an r152 demo for quadratic-bezier-curve2
+* (done) start an r152 demo for quadratic-bezier-curve2
 
 ### () - MON 05/22/2023
 * (done) threejs-materials-transparent
