--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -29,14 +29,19 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * () edit: threejs-mesh
 
 ### () - WED 05/24/2023
+* (done) edit: threejs-curve - proof read opening, start new points section
+* () edit: threejs-curve - expand new points seciton with at least one more demo
+
 * () start post #1043 on git-push
-* () edit: threejs-curve
+
 * () edit: threejs-curve-quadratic-bezier-curve3
 * () forpost: start threejs-curve-quadratic-bezier-curve for post folder with r152 demos
 * () forpost: threejs-curve-quadratic-bezier-curve
 
-### () - TUE 05/23/2023
 * () idle-mrsun : work on r101
+
+### () - TUE 05/23/2023
+* (done) idle-mrsun : work on r101
 * (done) edit: threejs-box3
 * (done) edit: threejs-buffer-geometry-index
 * (done) start an r152 demo for quadratic-bezier-curve2
