post-check;id#: 1010;v: 1.14;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -31,7 +31,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - WED 05/24/2023
 * (done) edit: threejs-curve - proof read opening, start new points section
 * (done) edit: threejs-curve - expand new points seciton with at least one more demo
-* () edit: threejs-curve-quadratic-bezier-curve3 - just proof read opening and getting started
+* (done) edit: threejs-curve-quadratic-bezier-curve3 - just proof read opening and getting started
 
 * () start post #1043 on git-push
 
