post-check;id#: 1043;v: 1.0;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -25,17 +25,15 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - THU 05/25/2023
 * () start post #1044 on threejs-curve-quadratic-bezier-curve
 * () edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
-* () edit: threejs-curve-geometry-from
-* () edit: threejs-mesh
+* () edit: threejs-curve-geometry-from - proof read
+* () edit: threejs-mesh - proof read
+* () edit: git-push - create, and expand sections
 
 ### () - WED 05/24/2023
 * (done) edit: threejs-curve - proof read opening, start new points section
 * (done) edit: threejs-curve - expand new points seciton with at least one more demo
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - just proof read opening and getting started
-
-* () start post #1043 on git-push
-
-
+* (done) start post #1043 on git-push
 
 * () forpost: start threejs-curve-quadratic-bezier-curve for post folder with r152 demos
 * () forpost: threejs-curve-quadratic-bezier-curve
