post-check;id#: 1044;v: 1.0;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -18,9 +18,12 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 
 
 ### () - FRI 05/26/2023
+* () edit: threejs-curve-quadratic-bezier-curve
+* () edit: git-push
 * () edit: threejs-normal-map
 * () edit: threejs-geometry
 * () build and publish
+* () idle-mrsun : work on r101
 
 ### () - THU 05/25/2023
 * () start post #1044 on threejs-curve-quadratic-bezier-curve
@@ -28,17 +31,15 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * () edit: threejs-curve-geometry-from - proof read
 * () edit: threejs-mesh - proof read
 * () edit: git-push - create, and expand sections
+* () idle-mrsun : work on r101
 
 ### () - WED 05/24/2023
 * (done) edit: threejs-curve - proof read opening, start new points section
 * (done) edit: threejs-curve - expand new points seciton with at least one more demo
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - just proof read opening and getting started
 * (done) start post #1043 on git-push
-
-* () forpost: start threejs-curve-quadratic-bezier-curve for post folder with r152 demos
-* () forpost: threejs-curve-quadratic-bezier-curve
-
-* () idle-mrsun : work on r101
+* (done) forpost: start threejs-curve-quadratic-bezier-curve for post folder with r152 demos
+* (done) idle-mrsun : work on r101
 
 ### () - TUE 05/23/2023
 * (done) idle-mrsun : work on r101
