post-check;id#: 1044;v: 1.1;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -26,7 +26,8 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 * () idle-mrsun : work on r101
 
 ### () - THU 05/25/2023
-* () start post #1044 on threejs-curve-quadratic-bezier-curve
+* (done) start post #1044 on threejs-curve-quadratic-bezier-curve
+* () edit: threejs-curve-quadratic-bezier-curve - excpand on sections
 * () edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
 * () edit: threejs-curve-geometry-from - proof read
 * () edit: threejs-mesh - proof read
