post-check;id#: 1044;v: 1.5;

--- a/todo/today/todo_2023_05.md
+++ b/todo/today/todo_2023_05.md
@@ -28,7 +28,7 @@ I have stayed in my lane with threejs for over a year, but I think now I should 
 ### () - THU 05/25/2023
 * (done) start post #1044 on threejs-curve-quadratic-bezier-curve
 * (done) edit: threejs-curve-quadratic-bezier-curve - excpand on sections
-* () edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
+* (done) edit: threejs-curve-quadratic-bezier-curve3 - section on, and link to new post on 2d class
 * () edit: threejs-curve-geometry-from - proof read
 * () edit: threejs-mesh - proof read
 * () edit: git-push - create, and expand sections
